# Embedded-Rust

./: Cargo.toml  README.md
.cargo/: config.toml
